--- a/cadastros/templates/criar_hospede.html
+++ b/cadastros/templates/criar_hospede.html
@@ -6,9 +6,7 @@
    <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Criar Hóspede</h3><hr> 
    <!-- Submenu -->
 
-   <!-- Card de inserção na reserva -->
-   
-   <!-- <div class="d-flex border-top shadow border-2 border-primary pt-2 mb-5 rounded bg-body-tertiary"> -->
+   <!-- Card de inserção de Hóspede -->
    <div class="container w-50 border-top shadow border-2 border-info mb-5 rounded bg-body-tertiary mt-5">
       <div class="container w-75 px-5 py-4">
             <form action="{% url 'cadastros:criar_hospede' %}" method="POST">
