--- a/cadastros/templates/criar_quarto.html
+++ b/cadastros/templates/criar_quarto.html
@@ -1,12 +1,71 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block conteudo %}
-
 <!-- Titulo -->
 <div class="container pt-4">
    <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Criar Quarto</h3><hr> 
-   <div class="mt-4 mb-3">
-      <h4 class="display-5" style="font-size: 18pt;">ID de reserva em 2131</h4>
+   <div class="container w-50 border-top shadow border-2 border-info mb-5 rounded bg-body-tertiary mt-5">
+      <div class="container w-100 px-5 py-4">
+            <form action="{% url 'cadastros:criar_quarto' %}" method="POST">
+               {% csrf_token %}
+               <div class="row form-group p-2">
+                  <div class="col">
+                     <label for="numCapacidade" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Capacidade: </label>
+                     <input class="form-control form-control-sm shadow" type="text" id="numCapacidade" name="numCapacidade" value="1" max="4">
+                  </div>
+                  <div class="col">
+                     <label for="numNumero" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Número:</label>
+                     <input class="form-control form-control-sm shadow" type="number" id="numNumero" name="numNumero">
+                  </div> 
+               </div>
+               
+               <div class="row form-group p-2">
+                  <div class="col form-group">
+                     <label for="numPreco" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Preço:</label>
+                     <input class="form-control form-control-sm shadow" type="number" id="numPreco" name="numPreco" value="50" min="50">
+                  </div> 
+                  <div class="col form-group">
+                     <label for="txtRanking" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Ranking:</label>
+                     <input class="form-control form-control-sm shadow" type="number" id="txtRanking" name="txtRanking" value="10" max="10">
+                  </div> 
+               </div> 
+               <div class="row form-group p-2">
+                  <div class=" w-100 px-4">
+                     <fieldset>
+                        <legend class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Disponibilidade:</legend>
+                        <div class="d-flex">
+                           <div class="form-check col">
+                           <input class="form-check-input" type="radio" name="numDisponibilidade" id="opcao1" value="1">
+                           <label class="form-check-label display-5 font-weight-bold" style="font-size: 11pt;" for="opcao1">
+                              🟩 Disp.
+                           </label>
+                        </div>
+                        <div class="form-check col">
+                           <input class="form-check-input" type="radio" name="numDisponibilidade" id="opcao2" value="2">
+                           <label class="form-check-label display-5 font-weight-bold" style="font-size: 11pt;" for="opcao2">
+                              🟥 Ocupado
+                           </label>
+                        </div>
+                        <div class="form-check col">
+                           <input class="form-check-input" type="radio" name="numDisponibilidade" id="opcao3" value="3">
+                           <label class="form-check-label display-5 font-weight-bold" style="font-size: 11pt;" for="opcao3">
+                              🟦 Limp./Man.
+                           </label>
+                        </div>
+                     </fieldset>
+                  </div>
+               </div>
+               <div class="row form-group p-2">
+                  <div class="form-group">
+                     <label for="txtAreaDesc" class="form-label display-5 font-weight-bold" style="font-size: 11pt;" >Descrição:</label>
+                     <textarea class="form-control form-control-sm display-5 font-weight-bold" style="font-size: 11pt;" id="txtAreaDesc" name="txtAreaDesc" rows="3"></textarea>
+                   </div> 
+               </div>
+               <div class="form-group p-2">
+                  <button type="submit" class="btn btn-primary btn-sm rounded w-100 shadow mt-3" >Salvar</button>
+               </div>
+            </form>
+      </div>
    </div>
 </div>  
 <div class="d-flex justify-content-center align-items-center">
