--- a/cadastros/templates/editar_quarto.html
+++ b/cadastros/templates/editar_quarto.html
@@ -6,7 +6,7 @@
    <!-- Titulo -->
    <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Quartos</h3><hr> 
    <div class="mt-1 mb-1">
-      <h4 class="display-5" style="font-size: 18pt;">Quantidade de Quartos: x</h4>
+      <h4 class="display-5" style="font-size: 18pt;">Quantidade de Quartos: {{qtdQuartos}}</h4>
    </div>
    <div class="text-center">
       <table class="table table-hover striped">
@@ -110,6 +110,11 @@
                   </td>
                </tr>
                <tr>
+                  <td class="text-start form-group">
+                     <textarea id="txtEditaDescricao" name="txtEditaDescricao" value="{{quartos.descricao}}" class="form-control form-control-sm display-5 font-weight-bold" style="font-size: 11pt;" rows="3"></textarea>
+
+                     <!-- <input type="text"  name="txtEditaDescricao" id="txtEditaDescricao" class="form-control form-control-sm shadow" placeholder="Descrição" style="width: 100%;"> -->
+                  </td>
                   <td colspan="5" class="text-end ">
                      <a href="#">
                         <button class="btn btn-sm btn-dark shadow mt-2" type="submit" style="padding: 8px 25px 8px 25px; border-radius: 2px; background-color:rgba(255, 255, 255, 0);color:rgb(0, 0, 0);">Atualizar</button>
@@ -155,6 +160,8 @@
                   $('#txtEditaRanking').val(data.quarto[0].ranking)
                   $('#txtEditaPreco').val(data.quarto[0].preco)
                   $('#txtEditaCapacidade').val(data.quarto[0].capacidade)
+                  $('#txtEditaDescricao').val(data.quarto[0].descricao)
+                  console.log(data.quarto[0].descricao)
                   if(data.quarto[0].disponibilidade == 1){
                      $('#opcao1').prop('checked', true)
                   }else if(data.quarto[0].disponibilidade == 2){
