--- a/reservas/templates/reservas.html
+++ b/reservas/templates/reservas.html
@@ -23,7 +23,7 @@
                   <img src="{% static 'img/search.png' %}" width="20px" height="20px" alt="Pesquisar">
                </div>
                <div class="col-3 ">
-                  <input type="number" class="form-control form-control-sm" id="txtQuartoPesq" placeholder="Quarto" value="" style="width: 100%;">
+                  <input type="number" class="form-control form-control-sm" id="txtQuartoPesq" placeholder="Quarto" value="" style="width: 100%;"min="1">
                </div>
             </div>
          </div>
