--- a/cadastros/templates/editar_quarto.html
+++ b/cadastros/templates/editar_quarto.html
@@ -26,38 +26,69 @@
             </tr>
          </thead>
          <tbody>
-            {% for quarto in page_obj %}
-            <tr class="quarto_row border align-middle" data-id="{{quarto.num_quarto}}" style="font-size: 12px;" >
-               <td>{{quarto.num_quarto}}</td>
-               <td>{{quarto.ranking}}</td>
-               <td>{{quarto.preco}}</td>
-               <td>{{quarto.capacidade}}</td>
-               <td>
-                  {% if quarto.disponibilidade == 1 %}
-                  🟩 Disponível
-                  {% elif quarto.disponibilidade == 2%}
-                  🟥 Ocupado
-                  {% else %}
-                  🟦 Limpeza/Manutenção
-                  {% endif %}
-               </td>
-               <td>
-                  <div class="container">
-                     <div class="row justify-content-center">
-                        <div class="col-auto">
-                           <img class="apagar" src="{% static 'img/delete.png'%}" data-id="{{quarto.num_quarto}}" alt="" width="20px" onclick="confirmarExclusao()">
-                        </div>
-                        <div class="col-auto">
-                           <img src="{% static 'img/update.png'%}" alt="" width="20px">
+            {% if quarto %}
+               <tr class="quarto_row border align-middle" data-id="{{num_quarto}}" style="font-size: 12px;" >
+                  <td>{{ quarto.num_quarto}}</td>
+                  <td>{{ quarto.ranking}}</td>
+                  <td>{{ quarto.preco}}</td>
+                  <td>{{ quarto.capacidade}}</td>
+                  <td>
+                     {% if quarto.disponibilidade == 1 %}
+                     🟩 Disponível
+                     {% elif quarto.disponibilidade == 2%}
+                     🟥 Ocupado
+                     {% else %}
+                     🟦 Limpeza/Manutenção
+                     {% endif %}
+                  </td>
+                  <td>
+                     <div class="container">
+                        <div class="row justify-content-center">
+                           <div class="col-auto">
+                              <img class="apagar" src="{% static 'img/delete.png'%}" data-id="{{num_quarto}}" alt="" width="20px" onclick="confirmarExclusao()">
+                           </div>
+                           <div class="col-auto">
+                              <img src="{% static 'img/update.png'%}" alt="" width="20px">
+                           </div>
                         </div>
                      </div>
-                  </div>
-               </td>
-            </tr>
-            {% endfor %}
+                  </td>
+               </tr>
+         </tbody>
+            {% else %}
+               {% for quarto in page_obj %}
+               <tr class="quarto_row border align-middle" data-id="{{quarto.num_quarto}}" style="font-size: 12px;" >
+                  <td>{{quarto.num_quarto}}</td>
+                  <td>{{quarto.ranking}}</td>
+                  <td>{{quarto.preco}}</td>
+                  <td>{{quarto.capacidade}}</td>
+                  <td>
+                     {% if quarto.disponibilidade == 1 %}
+                     🟩 Disponível
+                     {% elif quarto.disponibilidade == 2%}
+                     🟥 Ocupado
+                     {% else %}
+                     🟦 Limpeza/Manutenção
+                     {% endif %}
+                  </td>
+                  <td>
+                     <div class="container">
+                        <div class="row justify-content-center">
+                           <div class="col-auto">
+                              <img class="apagar" src="{% static 'img/delete.png'%}" data-id="{{quarto.num_quarto}}" alt="" width="20px" onclick="confirmarExclusao()">
+                           </div>
+                           <div class="col-auto">
+                              <img src="{% static 'img/update.png'%}" alt="" width="20px">
+                           </div>
+                        </div>
+                     </div>
+                  </td>
+               </tr>
+               {% endfor %}
          </tbody>
       </table>
-      {% include 'paginacao.html'%}
+            {% include 'paginacao.html'%}
+            {% endif %}
    </div>
 
    <form action="{% url 'cadastros:editar_quarto' %}" method="POST">
@@ -126,17 +157,6 @@
       </div>
    </form>
 </div> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <script>
    $(document).ready(function () {
