--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -7,56 +7,62 @@
 
 
    <div class="container">
-      <div class="row mt-5 mb-5 ">
-         <div class="d-flex justify-content-end">
-            <a href="{% url 'core:quartos_disponiveis'%}">
-               <div class="col-1 ms-4 me-1 legenda-cartao-verde"></div>
-            </a>
-            <div class="col-auto">Disponivel</div>
-
-            <a href="{% url 'core:quartos_reservados'%}">
-               <div class="col-1 ms-4 me-1 legenda-cartao-vermelho"></div>
-            </a>
-            <div class="col-auto ">Ocupado</div>
-
-            <div class="col-1 ms-4 me-1 legenda-cartao-azul"></div>
-            <div class="col-auto ">Limpeza</div>
-
-            <div class="col-1 ms-4 me-1 legenda-cartao-azul"></div>
-            <div class="col-auto ">Manutenção</div>
+      <div class="row mt-5 mb-5">
+          <div class="d-flex flex-wrap justify-content-end align-items-center">
+              <!-- Cartão Verde (Disponível) -->
+              <a href="{% url 'core:quartos_disponiveis' %}" class="d-flex align-items-center me-3 mb-2 nav-link">
+                  <!-- <div class="legenda-cartao-verde" style="width: 20px; height: 20px; border-radius: 5px;"></div> -->
+                  <div class="ms-2">🟩 Disponível</div>
+              </a>
+  
+              <!-- Cartão Vermelho (Ocupado) -->
+              <a href="{% url 'core:quartos_reservados' %}" class="d-flex align-items-center me-3 mb-2 nav-link">
+                  <!-- <div class="legenda-cartao-vermelho" style="width: 20px; height: 20px; border-radius: 5px;"></div> -->
+                  <div class="ms-2">🟥 Ocupado</div>
+              </a>
+  
+              <!-- Cartão Azul (Limpeza/Manutenção) -->
+              <a href="{% url 'core:quartos_indisponiveis' %}" class="d-flex align-items-center me-3 mb-2 nav-link">
+                 <!-- <div class="legenda-cartao-azul" style="width: 20px; height: 20px; border-radius: 5px;"></div> -->
+                 <div class="ms-2">🟦 Limpeza/Manutenção</div>
+              </a>
+  
+              <!-- Cartão Azul (Manutenção) -->
+              <a href="{% url 'core:main' %}" class="d-flex align-items-center me-3 mb-2 nav-link">
+                  <!-- <div class="legenda-cartao-azul" style="width: 20px; height: 20px; border-radius: 5px;"></div> -->
+                  <div class="ms-2">🟩🟥🟦 Todos</div>
+              </a>
+          </div>
       </div>
-   </div>
+  </div>
+  
 
    <!-- <div class="container">
       <input type="datetime" style="text-decoration: none;" value="11/02/2024">
    </div> -->
 
    <div class="container-fluid">
-      <div class="row text-center mt-3">
+      <div class="row text-center mt-3 row-cols-md-1 g-4 row-cols-4 justify-content-center">
       {% for quarto in quarto_lista %}
          {% if quarto.disponibilidade == 1 %}
          <div class="col shadow ms-3 me-3 mb-2 cartao-verde id_quarto" data-id="{{quarto.num_quarto}}" data-disp="{{quarto.disponibilidade}}">
             <p class="display-5">{{quarto.num_quarto}}</p>
             <hr>
             <p >Quarto disponível</p>
-            </div>
-            {% elif quarto.disponibilidade == 2 %}
-            <div class="col shadow ms-3 me-3 mb-2 cartao-vermelho id_quarto" data-id="{{quarto.num_quarto}}" data-disp="{{quarto.disponibilidade}}">
-               <p class="display-5" >{{quarto.num_quarto}}</p>
-               <hr>
-               <p>Quarto ocupado</p>
-               <p></p>
-            </div>
-            {% else %}
-            <div class="col shadow ms-3 me-3 mb-2 cartao-azul id_quarto" data-id="{{quarto.num_quarto}}" data-disp="{{quarto.disponibilidade}}">
-               <p class="display-5" >{{quarto.num_quarto}}</p>
-               <hr>
-               <p >Quarto indisponível</p>
-            </div>
-         {% endif %}
-         {% if forloop.counter|divisibleby:8 or forloop.last %}
-      </div> 
-      <div class="row text-center mt-3">
+         </div>
+         {% elif quarto.disponibilidade == 2 %}
+         <div class="col shadow ms-3 me-3 mb-2 cartao-vermelho id_quarto" data-id="{{quarto.num_quarto}}" data-disp="{{quarto.disponibilidade}}">
+            <p class="display-5" >{{quarto.num_quarto}}</p>
+            <hr>
+            <p>Quarto ocupado</p>
+            <p></p>
+         </div>
+         {% else %}
+         <div class="col shadow ms-3 me-3 mb-2 cartao-azul id_quarto" data-id="{{quarto.num_quarto}}" data-disp="{{quarto.disponibilidade}}">
+            <p class="display-5" >{{quarto.num_quarto}}</p>
+            <hr>
+            <p >Quarto indisponível</p>
+         </div>
          {% endif %}
          {% endfor %}
       </div>
@@ -73,7 +79,6 @@
          '<input type="hidden" name="num_quarto" value="' + num_quarto + '">' +
          '<input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">' +
       '</form>');
-
       $('body').append(form);
       form.submit();
     }else if(disponibilidade==2){
@@ -86,10 +91,9 @@
       form.submit();
     }else{
       var form = $('<form action="{% url 'cadastros:editar_quarto' %}" method="POST">' +
-         '<input type="hidden" name="num_quarto" value="' + num_quarto + '">' +
+         '<input type="hidden" name="num_quarto" id="num_quarto" value="' + num_quarto + '">' +
          '<input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">' +
       '</form>');
-
       $('body').append(form);
       form.submit();
     }
