--- a/resources/static/css/style.css
+++ b/resources/static/css/style.css
@@ -1,7 +1,3 @@
-/* body {
-    background-color: rgba(17, 17, 17, 0.736); /* Isso vai mudar o fundo da página para azul claro
-    color: aliceblue;
-} */
 /* Imagem de fundo */
 .fundo-login {
    background-image: url('{% static "img/DEST_FRANCE.jpg"%}');
@@ -12,9 +8,7 @@
 }
 
 /* Parte da logo */
-
-
-.logo{
+/* .logo{
     width: 158px; 
     height: 35px; 
     color: rgb(69, 68, 68);
@@ -22,10 +16,11 @@
     border-radius: 5px;
     text-align: center;
     padding-top: 5px;   
-}
+} */
 .formlogin{
     width: 100vh;
 }
+   
 .gestorii-input{
    border-radius: 0; 
 }
@@ -60,25 +55,49 @@
     transform: translateX(0);
 }
 
-.cartao-vermelho{
-    background-color: rgb(255, 80, 80);
-    width: 100px;
-    height: 150px;
+.produto{
+    width: 100%;
+    height: 100%;
     border-radius: 6px;
+    background-color: white;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos básicos para o cartao */
+.cartao-vermelho, .cartao-verde, .cartao-azul {
+   width: 10vw;  /* Usando 20% da largura da tela */
+   height: 20vh; /* Usando 30% da altura da tela */
+   border-radius: 6px;
+}
+
+/* Ajustes específicos para telas pequenas */
+@media (max-width: 768px) {  /* Para telas de tablets e smartphones */
+    .cartao-vermelho, .cartao-verde, .cartao-azul {
+        width: 20vw;  /* Tamanho maior proporcionalmente em dispositivos móveis */
+        height: 22vh; /* Tamanho maior proporcionalmente em dispositivos móveis */
+    }
+}
+
+/* Ajustes para telas pequenas ainda mais (celulares) */
+@media (max-width: 480px) {  /* Para telas de celulares */
+    .cartao-vermelho, .cartao-verde, .cartao-azul {
+        width: 30vw;  /* Ocupa mais da tela */
+        height: 20vh; /* Tamanho ajustado para celulares */
+    }
+}
+
+
+.cartao-vermelho{
+   background-color: rgb(255, 80, 80);
 }
 .cartao-verde{
    background-color: rgb(80, 255, 133);
-   width: 100px;
-   height: 150px;
-   border-radius: 6px;
 }
 .cartao-azul{
-   backdrop-filter: blur(10px);
-    background-color: rgb(80, 165, 255);
-    color: white;
-    width: 100px;
-    height: 150px;
-    border-radius: 6px;
+   background-color: rgb(80, 165, 255);
+   color: white;
 }
 .legenda-cartao-vermelho{
     background-color: rgb(255, 80, 80);
